spring-app/service.yaml
apiVersion: v1  
kind: Service  
metadata:  
  name: hello-service  
  labels:  
    app: hello-service  
spec:  
  ports:  
    - name: http  
      port: 8000  
  selector:  
    app: hello-service  
---
apiVersion: extensions/v1beta1  
kind: Deployment  
metadata:  
  name: hello-service  
spec:  
  replicas: 1  
  template:  
    metadata:  
      labels:  
        app: hello-service  
        version: v1  
    spec:  
      containers:  
        - name: hello-app  
          image: gcr.io/inspiring-code-228600/myapp 
          imagePullPolicy: IfNotPresent  
          ports:  
            - containerPort: 8000  
          livenessProbe:  
            httpGet:  
              path: /  
              port: 8000  
            initialDelaySeconds: 5  
            periodSeconds: 5
