spring-app/service2.yaml
apiVersion: v1  
kind: Service  
metadata:  
  name: hello-service-2
  labels:  
    app: hello-service-2 
spec:  
  ports:  
    - name: http  
      port: 8002  
  selector:  
    app: hello-service-2
---
apiVersion: extensions/v1beta1  
kind: Deployment  
metadata:  
  name: hello-service-2 
spec:  
  replicas: 1  
  template:  
    metadata:  
      labels:  
        app: hello-service-2
        version: v1  
    spec:  
      containers:  
        - name: hello-app  
          image: gcr.io/inspiring-code-228600/myapp 
          imagePullPolicy: IfNotPresent  
          ports:  
            - containerPort: 8002  
          livenessProbe:  
            httpGet:  
              path: /  
              port: 8002
            initialDelaySeconds: 5  
            periodSeconds: 5
